--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 .board-container {
+    background-color: rgba(0, 255, 255, 0.316);
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 10px;
@@ -13,4 +14,12 @@
     align-items: center;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.8);
+}
+
+.tile:hover {
+    background-color: rgb(35, 170, 248);
+}
+
+.tile-circle {
+    border-radius: 15%;
 }
